--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
-    "check": "prettier --write . && eslint --fix"
+    "check": "prettier --write . && eslint --fix",
+    "beta:reset-state": "bash scripts/beta/reset_local_state.sh",
+    "beta:export-diagnostics": "bash scripts/beta/export_diagnostics_and_scan.sh"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
