feat: CLAWSUITE_ALLOWED_HOSTS env for Tailscale/LAN access
Adds CLAWSUITE_ALLOWED_HOSTS env var (comma-separated hostnames).
When set, server binds to 0.0.0.0 and allows those hosts.
Requested by @tharshan_09 for Tailnet access.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ CLAWDBOT_GATEWAY_URL=ws://127.0.0.1:18789
 CLAWDBOT_GATEWAY_TOKEN=
 # Alternative:
 # CLAWDBOT_GATEWAY_PASSWORD=
+
+# Allow access from non-localhost (Tailscale, LAN, etc.)
+# Comma-separated hostnames. Also binds server to 0.0.0.0.
+# Example: CLAWSUITE_ALLOWED_HOSTS=my-server.tail1234.ts.net,192.168.1.50
+# CLAWSUITE_ALLOWED_HOSTS=
