Add watchdog monitoring system and crypto.randomUUID polyfill
- Add watchdog scripts (health check, restart, daemon)
- Add UPTIME_RUNBOOK.md documentation
- Add crypto.randomUUID polyfill for non-secure contexts (http)
- Update .gitignore to exclude watchdog state files

This enables automatic monitoring and recovery of the preview server.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,11 @@ count.txt
 todos.json
 releases/
 
+# Watchdog runtime state (logs/ already has *.log covered)
+logs/watchdog.state
+logs/watchdog.pid
+logs/watchdog.log
+
 # Wrangler (Cloudflare Workers)
 .wrangler
 
