--- a/package.json
+++ b/package.json
@@ -14,7 +14,19 @@
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0 --port 4173",
+    "start": "bash scripts/ops/start.sh",
+    "start:dev": "bash scripts/ops/start.sh --mode dev",
+    "stop": "bash scripts/ops/stop.sh",
+    "restart": "bash scripts/ops/start.sh --clean --force",
+    "rollback": "bash scripts/ops/rollback.sh",
+    "rollback:plan": "bash scripts/ops/rollback.sh --dry-run",
+    "clean-start": "bash scripts/ops/clean-start.sh",
+    "status": "bash scripts/ops/watchdog-health.sh",
+    "deploy": "bash scripts/ops/deploy-with-rollback.sh deploy --pre-build",
+    "deploy:status": "bash scripts/ops/deploy-with-rollback.sh status",
+    "rollback:tx": "bash scripts/ops/deploy-with-rollback.sh rollback",
+    "health:endpoint": "bash scripts/ops/health-endpoint.sh --daemonize",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
